    set, only Kerberos principals in the listed realms will be able to
    obtain authentication tokens from the WebKDC.  This allows sites with
    Kerberos cross-realm trust to prevent users in foreign realms from
    obtaining WebAuth credentials that satisfy "require valid-user".

    Thanks to Dmitri Priimak for the patch.

 *) The WebLogin login.tmpl template may be called with err_rejected set
    if the authenticating principal is rejected by the WebKDC.  Login
    templates should be modified to handle this variable.

 *) Add a new error to the WebKDC protocol, 18, indicating that the WebKDC
    did not permit that user to authenticate.  This error is returned when
    WebKdcPermittedRealms is set and the realm of the authenticating
    principal isn't included.  Add support for the new error in the
    WebLogin code, setting the template variable err_rejected.  Based on
    work by Dmitri Priimak.

 *) libwebauth provides a new webauth_krb5_get_realm function, which
    returns the realm of the current authenticated principal.

 *) The libwebauth webauth_krb5_get_principal function takes as its third
    argument, instead of a flag, an enum indicating what sort of
    canonicalization to perform.  Accepted values are WA_KRB5_CANON_LOCAL
    (to call krb5_aname_to_localname), WA_KRB5_CANON_STRIP (to strip any
    realm), and WA_KRB5_CANON_NONE (to return the fully-qualified
    principal).

 *) In the WebLogin script, work around a bug in the CGI module that
    causes it to misparse and die on WebLogin URLs that contain two
    slashes and two plus signs.

 *) WebLogin now supports a new configuration variable, $DEFAULT_REALM.
    If set, WebLogin will append @ and $DEFAULT_REALM to usernames that do
    not contain @ before passing them to the WebKDC.  This is primarily
    useful if principals should be authenticated in a different Kerberos
    realm than the default realm of the WebKDC.
